--- a/pages/01-componentes/index.html
+++ b/pages/01-componentes/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Componentes</title>
+    <title>Componentes - TechStore</title>
 
     <link rel="stylesheet" href="/css/default.css">
     <link rel="stylesheet" href="/components/header/header.css">
