--- a/pages/05-login/index.html
+++ b/pages/05-login/index.html
@@ -12,21 +12,24 @@
   <!-- CSS específico del login -->
   <link rel="stylesheet" href="/css/login.css">
 
-  <script src="/components/header/insert-header.js" defer></script>
+  <!-- JS header y login -->
+  <script src="/components/header/header.js" defer></script>
   <script src="/js/login.js" defer></script>
 </head>
 <body>
 
+  <!-- Contenedor página login -->
   <div class="login-page-container">
     <!-- Header insertado automáticamente -->
     <div include-html="/components/header/index.html"></div>
 
-    <!-- Formulario centrado -->
+    <!-- Contenido centrado -->
     <div class="login-content">
       <div class="box">
+        <!-- Título de la sección -->
         <h2 id="title">Iniciar Sesión</h2>
 
-        <!-- Login -->
+        <!-- Formulario login -->
         <div id="login">
           <input type="email" placeholder="Correo electrónico" required />
           <input type="password" placeholder="Contraseña" required />
@@ -34,7 +37,7 @@
           <div class="toggle" onclick="showRegister()">¿No tienes cuenta? Regístrate</div>
         </div>
 
-        <!-- Registro -->
+        <!-- Formulario registro -->
         <div id="register" style="display:none;">
           <input type="text" placeholder="Nombre completo" required />
           <input type="email" placeholder="Correo electrónico" required />
